--- a/TMonacoDemo/MainWindow.xaml
+++ b/TMonacoDemo/MainWindow.xaml
@@ -1,12 +1,20 @@
-﻿<Window x:Class="TMonacoDemo.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TMonacoDemo" xmlns:tmonaco="clr-namespace:TMonaco;assembly=TMonaco"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+﻿<Window
+    x:Class="TMonacoDemo.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:TMonacoDemo"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:tmonaco="clr-namespace:TMonaco;assembly=TMonaco"
+    Title="MainWindow"
+    Width="800"
+    Height="450"
+    mc:Ignorable="d">
     <Grid>
-        <tmonaco:TMonacoEditor x:Name="editor"></tmonaco:TMonacoEditor>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+        <tmonaco:TMonacoEditor x:Name="editor" Grid.Column="1" />
     </Grid>
 </Window>
